/*
 * CDispatcher.h
 *
 *  Created on: 24 Jan 2023
 *      Author: salavat.magazov
 */

#ifndef CDISPATCHER_H_
#define CDISPATCHER_H_

class CDispatcher {
public:
	CDispatcher();
	virtual ~CDispatcher();
};

#endif /* CDISPATCHER_H_ */
